@@ -59,6 +59,7 @@ export("Cholesky",
        "readHB",
        "readMM",
        "sparse.model.matrix",
+       "sparseVector",
        "symmpart",
        "skewpart",
        "tcrossprod",
